# aiogram_forms

./: README.md  babel.cfg  example.py  pyproject.toml  requirements.txt
aiogram_forms/: builder.py  buttons.py  utils.py
aiogram_forms/callbacks/: factories.py
aiogram_forms/fields/: abstract_fields.py  click_fields.py  complex_fields.py  inline_fields.py  message_fields.py
aiogram_forms/modifiers/: formatters.py  validators.py  visibles.py
translations/ru/LC_MESSAGES/: messages.po
